# pokemood

./: README.md  pyproject.toml
assents/: pokemood.sql
src/: .env  main.py
src/controllers/: authController.py
src/database/: connection.py  pokemood.sql
src/models/: connection.py  schemasModel.py  usuarioModel.py
src/pokemood.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/services/: email_service.py
src/views/: dashboardView.py  loginView.py  recoveryView.py  registerView.py
